crates/reinhardt-pages/tests/ui/client_form/choices/fail/alias_collision.stderr
error: ClientFormChoices serde alias `live` collides with an emitted choice value
 --> tests/ui/client_form/choices/fail/alias_collision.rs:7:2
  |
7 |     Fake,
  |     ^^^^
